# discord-bot

./: .gitignore  Cargo.toml  README.org  reply_config.json
src/: checks.rs  commands.rs  main.rs  reply.rs
