[package]
name = "discordbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
poise = "0.5.5"
serde = { version = "1.0.163", features = ["serde_derive", "derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["tokio-macros", "full"] }
